/* Copyright (C) 2020 Patrick Ziegler
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

#pragma once

#include <mediacopier/PathPattern.hpp>

#include <memory>
#include <utility>

namespace MediaCopier {

class FileInfoImage;
class FileInfoJpeg;
class FileInfoVideo;

class AbstractFileOperation {
public:
    explicit AbstractFileOperation(PathPattern pathPattern)
        : m_pathPattern(std::move(pathPattern)) {}
    virtual ~AbstractFileOperation() = default;
    virtual int visit(const FileInfoImage &file) const = 0;
    virtual int visit(const FileInfoJpeg &file) const = 0;
    virtual int visit(const FileInfoVideo &file) const = 0;
protected:
    PathPattern m_pathPattern;
};

}
