@startuml
set namespaceSeparator ::
skinparam shadowing false

namespace MediaCopier {
    namespace Core {
        class AbstractFileFactory {
        }

        class FileFactory {
        }

        class AbstractFile {
            +int execute(AbstractFileOperation operation)
        }

        class FileImage {
        }

        class FileVideo {
        }

        class AbstractFileOperation {
            +int visit(AbstractFile file)
        }

        class FileOperationCopy {
        }

        class FileOperationMove {
        }

        class AbstractPathPattern {
        }

        class PathPattern {
        }

        AbstractFile <|-- FileImage
        AbstractFile <|-- FileVideo
        AbstractFileFactory <|-- FileFactory

        AbstractFileOperation <|-- FileOperationCopy
        FileOperationCopy <|-- FileOperationMove

        AbstractPathPattern <|-- PathPattern
    }

    namespace JpegTran {
        class FileImage {
        }

        class FileOperationCopy {
        }

        class FileOperationMove {
        }

        MediaCopier::Core::FileFactory <|-- FileFactory
        MediaCopier::Core::FileImage <|-- FileImage
        MediaCopier::Core::FileOperationCopy <|-- FileOperationCopy
        MediaCopier::Core::FileOperationMove <|-- FileOperationMove
    }
}
@enduml
